--- a/src/views/start/jobs.ejs
+++ b/src/views/start/jobs.ejs
@@ -147,7 +147,7 @@
                     </div>
                 
                     <div class="bg-white rounded-lg shadow-lg p-6">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRs3HAcuu_SqzkP2cyw1C27soFwm4PxHVw0eg&s" alt="Banner jc_0007" class="rounded-t-lg h-24 w-full object-cover mb-4">
+                        <img src="https://cdn.discordapp.com/banners/1072164300636028979/a00b8f280e77cc7ed62f853b6a6d3d92?size=4096" alt="Banner jc_0007" class="rounded-t-lg h-24 w-full object-cover mb-4">
                         <img src="https://cdn.discordapp.com/avatars/1072164300636028979/709d5c5f1b5d915785349104de4fe751?size=1024" alt="jc_0007" class="rounded-full h-24 w-24 mx-auto mb-4">
                         <h3 class="text-xl font-semibold">jc_0007</h3>
                         <p class="text-gray-600">País: <span class="font-medium">República Dominicana</span></p>
@@ -197,7 +197,7 @@
             <div class="flex flex-col items-center">
                 <div class="flex items-center space-x-4 mb-6">
                     <img src="https://github.com/NakamaStream/Resources/blob/main/NakamStream-logo-HD-removebg.png?raw=true" alt="NakamaStream_Logo" class="h-12">
-                    <p class="text-gray-600">NakamaStream version: 1.0</p>
+                    <p class="text-gray-600">NakamaStream version: 1.0.1</p>
                 </div>
                 <ul class="flex flex-wrap justify-center space-x-4 mb-6">
                     <li><a href="/" class="text-gray-700 hover:text-primary transition-colors duration-200">Inicio</a></li>
