--- a/src/views/anime/anime-list-mobile.ejs
+++ b/src/views/anime/anime-list-mobile.ejs
@@ -180,13 +180,13 @@
         </div>
       </div>
 
-    <!-- Recientes Animes -->
+      <!-- Recientes Animes -->
     <div class="container mx-auto px-4 py-4">
         <h2 class="text-xl font-bold mb-4 text-center text-gray-800">Animes En emisión</h2>
-        <div class="grid grid-cols-2 gap-4">
-            <% animes.filter(anime => anime.status === 'ongoing').slice(0, 6).forEach(anime => { %>
-                <a href="/anime/<%= anime.slug %>" class="block relative overflow-hidden rounded-lg shadow-lg transition-all duration-300 hover:scale-105 hover:shadow-xl group">
-                    <img src="<%= anime.imageUrl %>" alt="<%= anime.name %>" class="w-full h-full object-cover">
+        <div class="flex gap-4 overflow-x-auto">
+            <% animes.filter(anime => anime.status === 'ongoing').slice(0, 10).forEach(anime => { %>
+                <a href="/anime/<%= anime.slug %>" class="flex-none w-56 relative overflow-hidden rounded-lg shadow-lg transition-all duration-300 hover:scale-105 hover:shadow-xl group">
+                    <img src="<%= anime.imageUrl %>" alt="<%= anime.name %>" class="w-full h-full object-cover" loading="lazy">
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/70 to-transparent flex flex-col justify-end opacity-0 group-hover:opacity-100 transition-opacity duration-300 p-2">
                         <div class="text-white text-center drop-shadow-lg">
                             <h2 class="text-sm font-semibold mb-1 truncate"><%= anime.name %></h2>
@@ -196,7 +196,7 @@
                             <span class="text-xs bg-orange-500 text-white px-2 py-1 rounded-full mt-2 inline-block">EP. <%= anime.episodeCount %></span>
                             <span class="text-xs px-3 py-1 rounded-full text-white transform transition-all duration-500 ease-in-out 
                                 <%= anime.status === 'ongoing' ? 'bg-blue-500 scale-105 opacity-100' : 'bg-green-500 scale-95 opacity-90' %>">
-                                <%= anime.status === 'ongoing' ? 'En emisión' : 'Completa' %>
+                                <%= anime.status === 'ongoing' ? 'En emisión' : 'Finalizado' %>
                             </span>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
         <div class="grid grid-cols-2 gap-4">
             <% animes.forEach(anime => { %>
                 <a href="/anime/<%= anime.slug %>" class="block relative overflow-hidden rounded-lg shadow-lg transition-all duration-300 hover:scale-105 hover:shadow-xl group">
-                    <img src="<%= anime.imageUrl %>" alt="<%= anime.name %>" class="w-full h-full object-cover">
+                    <img src="<%= anime.imageUrl %>" alt="<%= anime.name %>" class="w-full h-full object-cover" loading="lazy">
                     <div class="absolute inset-0 bg-gradient-to-t from-black via-black/70 to-transparent flex flex-col justify-end opacity-0 group-hover:opacity-100 transition-opacity duration-300 p-2">
                         <div class="text-white text-center drop-shadow-lg">
                             <h2 class="text-sm font-semibold mb-1 truncate"><%= anime.name %></h2>
@@ -221,7 +221,7 @@
                             <span class="text-xs bg-orange-500 text-white px-2 py-1 rounded-full mt-2 inline-block">EP. <%= anime.episodeCount %></span>
                             <span class="text-xs px-3 py-1 rounded-full text-white transform transition-all duration-500 ease-in-out 
                             <%= anime.status === 'ongoing' ? 'bg-blue-500 scale-105 opacity-100' : 'bg-green-500 scale-95 opacity-90' %>">
-                            <%= anime.status === 'ongoing' ? 'En emisión' : 'Completa' %>
+                            <%= anime.status === 'ongoing' ? 'En emisión' : 'Finalizado' %>
                             </span>
                         </div>
                     </div>
