--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -56,8 +56,13 @@
                                 <i class="fas fa-lock text-custom"></i>
                             </div>
                             <input type="password" id="password" name="password" required
-                                   class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom sm:text-sm transition duration-150 ease-in-out"
+                                   class="block w-full pl-10 pr-10 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-custom focus:border-custom sm:text-sm transition duration-150 ease-in-out"
                                    placeholder="Contraseña">
+                            <div class="absolute inset-y-0 right-0 pr-3 flex items-center">
+                                <button type="button" onclick="togglePassword()" class="text-gray-500 focus:outline-none">
+                                    <i id="togglePasswordIcon" class="fas fa-eye"></i>
+                                </button>
+                            </div>
                         </div>
                     </div>
 
@@ -104,6 +109,20 @@
     </div>
 
     <script>
+        function togglePassword() {
+            const passwordField = document.getElementById('password');
+            const toggleIcon = document.getElementById('togglePasswordIcon');
+            if (passwordField.type === 'password') {
+                passwordField.type = 'text';
+                toggleIcon.classList.remove('fa-eye');
+                toggleIcon.classList.add('fa-eye-slash');
+            } else {
+                passwordField.type = 'password';
+                toggleIcon.classList.remove('fa-eye-slash');
+                toggleIcon.classList.add('fa-eye');
+            }
+        }
+
         document.getElementById("reload-captcha").addEventListener("click", function() {
             fetch("/api/auth/new-captcha")
             .then(response => response.json())
